--- a/styles/main.css
+++ b/styles/main.css
@@ -64,6 +64,12 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: .1rem;
 }
 
+ul {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 35%;
+  padding-bottom: 10px;
+}
+
 /*
   Helpers
 */
